Sutter Health/src/objects/Benefit_Plan_Coverage_Detail__c.object
<CustomObject>
    <description>This boject is split from  Benefit Plan Coverage for req no 3236 forOLTP</description>
    <fields>
        <fullName>Benefit_Coverage_Date_End__c</fullName>
        <label>Benefit Coverage Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Coverage_Date_Start__c</fullName>
        <label>Benefit Coverage Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Coverage_Description__c</fullName>
        <label>Benefit Coverage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Coverage_HCC_ID__c</fullName>
        <label>Benefit Coverage HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Coverage_Name__c</fullName>
        <label>Benefit Coverage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Detail_Benefit_Coverage_HR_ID__c</fullName>
        <label>Benefit Detail Benefit Coverage HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Detail_Member_HR_ID__c</fullName>
        <label>Benefit Detail Member HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_Coverage_Detail_External_ID__c</fullName>
        <description>External ID used to match a benefit plan coverage detail record to the original record in HealthEdge when updating and/or inserting. 
Composite key created from the concatenation of  Benefit_Detail_Member_HR_ID__c + Benefit_Detail_Benefit_Coverage_HR_ID__c + Benefit_Plan_Coverage_Detail_HR_ID__c</description>
        <externalId>true</externalId>
        <label>Benefit Plan Coverage Detail External ID</label>
        <length>85</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Benefit_Plan_Coverage_Detail_HR_ID__c</fullName>
        <label>Benefit Plan Coverage Detail HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_Coverage_ID__c</fullName>
        <label>Benefit Plan Coverage ID</label>
        <referenceTo>Benefit_Plan_Coverage__c</referenceTo>
        <relationshipLabel>Benefit Plan Coverage Details</relationshipLabel>
        <relationshipName>Benefit_Plan_Coverage_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Benefit Plan Coverage Detail</label>
    <nameField>
        <label>Benefit Plan Coverage Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Plan Coverage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>